# spacedrive

./: Cargo.toml  README.md  pnpm-lock.yaml
.cargo/: config.toml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/native/macos/: Package.resolved  Package.swift
apps/desktop/src-tauri/native/macos/src/: lib.swift
apps/desktop/src-tauri/src/: build.rs  main.rs  window.rs
apps/mobile/: package.json
apps/server/: package.json
core/: Cargo.toml  package.json
core/prisma/: Cargo.toml  schema.prisma
core/prisma-crdt/: Cargo.toml  README.md
core/prisma-crdt/docs/: index.md  prisma-schema.md
core/prisma-crdt/example/: Cargo.toml
core/prisma-crdt/example/prisma/: schema.prisma
core/prisma-crdt/example/prisma/migrations/20220616161833_/: migration.sql
core/prisma-crdt/example/src/: main.rs  prisma.rs  prisma_crdt.rs
core/prisma-crdt/src/: lib.rs  local.rs  main.rs  owned.rs  relation.rs  shared.rs
core/prisma-crdt/src/generator/: mod.rs
core/sql-crdt/: Cargo.toml
core/sql-crdt/docs/: index.md
core/sql-crdt/src/: lib.rs  many_relation.rs  shared_record.rs
core/sql-crdt/tests/: lib.rs
core/sql-crdt/tests/database/: file.rs  file_path.rs  mod.rs  operation.rs  tag.rs  tag_on_file.rs
core/src/: lib.rs
core/src/native/: methods.rs  swift.rs
